apps/default/bytestash/manifests/bytestash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytestash
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Code snippets and notes
    gethomepage.dev/group: Code
    gethomepage.dev/icon: bytestash
    gethomepage.dev/name: ByteStash
spec:
  rules:
    # DNS will be replaced by kustomize
    - host: bytestash.$(DNS)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bytestash
                port:
                  name: http
---
# Deployment for the bytestash service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      containers:
        - name: bytestash
          image: ghcr.io/jordan-dalby/bytestash:1.5.6
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data-volume
              mountPath: /data/snippets # Mount the PVC to this path
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: bytestash-data
---
# Service to expose the bytestash deployment
apiVersion: v1
kind: Service
metadata:
  name: bytestash
spec:
  selector:
    app: bytestash
  ports:
    - name: http
      protocol: TCP
      port: 5005
      targetPort: 5000
  type: ClusterIP
