apps/default/bytestash/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytestash
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Code snippets and notes
    gethomepage.dev/group: Code
    gethomepage.dev/icon: bytestash
    gethomepage.dev/name: ByteStash
spec:
  rules:
    # DNS will be replaced by kustomize
    - host: bytestash.$(DNS)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bytestash
                port:
                  name: http
